--- a/config/datasets/pascal3d.yaml
+++ b/config/datasets/pascal3d.yaml
@@ -38,7 +38,7 @@ occ_level: 0
 enable_cache: true
 subtypes: None
 weighted: true
-remove_no_bg: true
+remove_no_bg: 8
 transforms:
     - class_name: nemo.datasets.pascal3d.ToTensor
 
