--- a/config/datasets/pascal3d_cls.yaml
+++ b/config/datasets/pascal3d_cls.yaml
@@ -1,24 +1,7 @@
+includes: config/datasets/pascal3d.yaml
+
 name: pascal3d_cls
-class_name: nemo.datasets.pascal3d.Pascal3DPlus
 root_path: /mnt/sdc/wufei/data/PASCAL3D_NeMo_cls
-
-pascal3d_raw_path: data/PASCAL3D+_release1.1
-pascal3d_raw_url: ftp://cs.stanford.edu/cs/cvgl/PASCAL3D+_release1.1.zip
-pascal3d_occ_raw_path: data/OccludedPASCAL3D
-pascal3d_occ_script_url: https://raw.githubusercontent.com/Angtian/OccludedPASCAL3D/master/download_FG.sh
-image_subsets_url: https://docs.google.com/uc?export=download&id=1NsoVXW8ngQCqTHHFSW8YYsCim9EjiXS7
-dtd_raw_path: data/dtd
-mesh_path: data/PASCAL3D+_release1.1/CAD_single
-
-pad_texture: false
-single_mesh: true
-training_only: false
-augment_by_dist: false
-prepare_mode: first
-
-occ_levels:
-    train: [0]
-    val: [0, 1, 2, 3]
 
 image_sizes:
     aeroplane: [512, 512]
@@ -33,13 +16,3 @@ image_sizes:
     sofa: [512, 512]
     train: [512, 512]
     tvmonitor: [512, 512]
-
-occ_level: 0
-enable_cache: true
-subtypes: None
-weighted: true
-remove_no_bg: 8
-transforms:
-    - class_name: nemo.datasets.pascal3d.ToTensor
-
-sampler: None
