--- a/config/models/nemo_cls.yaml
+++ b/config/models/nemo_cls.yaml
@@ -23,10 +23,8 @@ training:
         weight_decay: 0.0001
 
     scheduler:
-        class_name: torch.optim.lr_scheduler.MultiStepLR
-        milestones:
-            - 400
-            - 600
+        class_name: torch.optim.lr_scheduler.StepLR
+        step_size: 40
         gamma: 0.2
 
 inference:
