--- a/config/datasets/pascal3d.yaml
+++ b/config/datasets/pascal3d.yaml
@@ -1,16 +1,16 @@
 name: pascal3d
 class_name: nemo.datasets.pascal3d.Pascal3DPlus
-root_path: data/PASCAL3D_NeMo
+root_path: /misc/lmbraid21/jesslen/NeMo/data/PASCAL3D_NeMo
 
-pascal3d_raw_path: data/PASCAL3D+_release1.1
+pascal3d_raw_path: /misc/lmbraid21/jesslen/NeMo/data/PASCAL3D+_release1.1
 pascal3d_raw_url: ftp://cs.stanford.edu/cs/cvgl/PASCAL3D+_release1.1.zip
-pascal3d_occ_raw_path: data/OccludedPASCAL3D
+pascal3d_occ_raw_path: /misc/lmbraid21/jesslen/NeMo/data/OccludedPASCAL3D
 pascal3d_occ_script_url: https://raw.githubusercontent.com/Angtian/OccludedPASCAL3D/master/download_FG.sh
 image_subsets_url: https://docs.google.com/uc?export=download&id=1NsoVXW8ngQCqTHHFSW8YYsCim9EjiXS7
 seg_data_url: https://docs.google.com/uc?export=download&id=1hx6eErHtuR7TCGlQMyl2_03gXDTQw3Qm
-seg_data_path: data/PASCAL3D_segmentation
-dtd_raw_path: data/dtd
-mesh_path: data/PASCAL3D+_release1.1/CAD_single
+seg_data_path: /misc/lmbraid21/jesslen/NeMo/data/PASCAL3D_segmentation
+dtd_raw_path: /misc/lmbraid21/jesslen/NeMo/data/dtd
+mesh_path: /misc/lmbraid21/jesslen/NeMo/data/PASCAL3D+_release1.1/CAD_single
 
 pad_texture: false
 single_mesh: true
