--- a/config/models/nemo.yaml
+++ b/config/models/nemo.yaml
@@ -16,6 +16,8 @@ training:
     loss_reg_weight: 0.1
     train_accumulate: 10
     T: 0.07
+    remove_near_mode: pixel
+    proj_mode: prepared
 
     optimizer:
         class_name: torch.optim.Adam
@@ -30,9 +32,14 @@ training:
         gamma: 0.2
 
 inference:
+    init_mode: 3d_batch
+
     cameras:
-        class_name: pytorch3d.renderer.OpenGLPerspectiveCameras
-        fov: 12.0
+        class_name: pytorch3d.renderer.PerspectiveCameras
+        in_ndc: false
+        image_size: -1
+        principal_point: -1
+        focal_length: 3000
 
     raster_settings:
         class_name: pytorch3d.renderer.RasterizationSettings
