--- a/config/models/nemo_cls.yaml
+++ b/config/models/nemo_cls.yaml
@@ -16,6 +16,8 @@ training:
     loss_reg_weight: 0.1
     train_accumulate: 10
     T: 0.07
+    remove_near_mode: pixel
+    proj_mode: prepared
 
     optimizer:
         class_name: torch.optim.Adam
