Add supports for VoGE

--- a/config/pose_estimation_3d_voge.yaml
+++ b/config/pose_estimation_3d_voge.yaml
@@ -18,6 +18,7 @@ inference:
 
     search_translation: false
     optimize_translation: false
+    convert_percentage: 0.6
 
     px_sample:
         min: 0.0
