--- a/config/pose_estimation_3d_runtime.yaml
+++ b/config/pose_estimation_3d_runtime.yaml
@@ -13,6 +13,7 @@ training:
     remove_no_bg: 8
 
 inference:
+    init_mode: 3d_batch
     loss: nemo.models.solve_pose.loss_fg_bg
     batch_size: 20 # set to 20 for 24GB vmem
 
