--- a/config/omni_nemo_pose_6d_ori.yaml
+++ b/config/omni_nemo_pose_6d_ori.yaml
@@ -16,6 +16,7 @@ inference:
     loss: nemo.models.solve_pose.loss_fg_bg
     batch_size: 20 # set to 20 for 24GB vmem
     init_mode: 6d_batch
+    classification: false
 
     search_translation: false
     optimize_translation: false
