--- a/config/omni_voge_pose_3d_ori.yaml
+++ b/config/omni_voge_pose_3d_ori.yaml
@@ -15,6 +15,7 @@ training:
 inference:
     loss: nemo.models.solve_pose.loss_fg_bg
     batch_size: 18
+    classification: false
 
     search_translation: false
     optimize_translation: false
