--- a/config/pose_estimation_3d_nemo_cls.yaml
+++ b/config/pose_estimation_3d_nemo_cls.yaml
@@ -17,6 +17,7 @@ inference:
     random_seed: 0
     loss: nemo.models.solve_pose.loss_fg_bg
 
+    classification: false
     search_translation: false
     optimize_translation: false
 
