--- a/config/models/nemo_runtime.yaml
+++ b/config/models/nemo_runtime.yaml
@@ -18,6 +18,7 @@ training:
     proj_mode: runtime_kp
     remove_near_mode: vert
     distance_thr: 0.1
+    classification: false
 
     optimizer:
         class_name: torch.optim.Adam
