--- a/config/omni_nemo_pose_3d.yaml
+++ b/config/omni_nemo_pose_3d.yaml
@@ -16,6 +16,7 @@ inference:
     init_mode: 3d_batch
     loss: nemo.models.solve_pose.loss_fg_bg
     batch_size: 20 # set to 20 for 24GB vmem
+    classification: false
 
     search_translation: false
     optimize_translation: false
