--- a/config/models/faster_rcnn.yaml
+++ b/config/models/faster_rcnn.yaml
@@ -7,6 +7,7 @@ num_classes: 2
 transforms: []
 
 training:
+    classification: false
     optimizer:
         class_name: torch.optim.SGD
         lr: 0.02
