--- a/config/models/nemo_voge_optim_pose.yaml
+++ b/config/models/nemo_voge_optim_pose.yaml
@@ -18,7 +18,6 @@ training:
     proj_mode: runtime_voge
     remove_near_mode: vert
     distance_thr: 0.1
-    classification: false
 
     latent_iter_per: 1
     latent_to_update: 
@@ -74,7 +73,7 @@ backbone:
     n_noise_points: 5
 
 memory_bank:
-    class_name: nemo.models.feature_banks.NearestMemoryManager
+    class_name: nemo.models.feature_banks.FeatureBankNeMo
     input_size: 128
     K: 1
     momentum: 0.96
